[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Grégoire Roussel <gregoire.roussel@wandercraft.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7"
ansi_term="0.12"
termion="1"

[lib]
name="minesweeper"
path="src/lib.rs"

[[example]]
name="async"
path="examples/async.rs"